# pr-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
pr_bridge/: __init__.py  cli.py  fetcher.py  formatter.py
